--- a/awesome/rc.lua.4
+++ b/awesome/rc.lua.4
@@ -108,7 +108,7 @@ filesmenu = {
    { "ViFM", terminal .. " -e vifm" }
 }
 internetmenu = {
-   { "Chromium", "chromium" },
+   { "Chromium", "chromium-browser" },
    { "dwb", "dwb" }
 }
 entertainmentmenu = {
